<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZeLok</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="background_color">#5F5F7F</color>
    <string name="setup_button_description">Click to setup</string>
    <string name="setup_confirm_button">Send</string>
    <string name="service_name">Zelok Listener</string>
    <color name="edit_text_color">#EFEFEF</color>
    <string name="setup_textfield_default">Enter Zelok Number</string>
    <string name="setup_longwait">Waiting for ZeLok to respond.\nYou may close the app. </string>
    <string name="notification_setup_finished_short">ZeLok responded!</string>
    <string name="notification_setup_finished_title">Press to continue</string>
    <string name="notification_setup_finished_content"/>
    <string name="setup_completed">You may use your device.</string>
    <string name="test_setup_button_description">Test your settings</string>
    <string name="test_setup_button_name">Test Me</string>
    <string name="retry">Retry</string>
    <string name="setup_zelok_number_hint">Enter ZeLok number</string>
    <string name="setup_user_number_hint">Enter Your phone number</string>

</resources>